Fix fabric-bal connectivity
Signed-off-by: Vladimir Yussupov <v.yussupov@gmail.com>

--- a/AutomateSetup/bal/Dockerfile
+++ b/AutomateSetup/bal/Dockerfile
@@ -29,6 +29,7 @@ COPY /tomcat/tomcat-users.xml /usr/local/tomcat/conf/
 COPY connectionProfiles-fab.json $HOME/root/.bal/connectionProfiles.json
 # configure fabric-network
 COPY /fab/connection-org1.json /fab/connection-org1.json
+COPY /fab/wallet /fab/wallet
 EXPOSE 8080
 CMD chmod +x /usr/local/tomcat/bin/catalina.sh
 CMD ["catalina.sh", "run"]
