--- a/AutomateSetup/docker-compose.yml
+++ b/AutomateSetup/docker-compose.yml
@@ -27,17 +27,17 @@ services:
     networks:
       case-study:
         ipv4_address: 172.16.238.11
-  ganache-cli:
-    image: trufflesuite/ganache-cli
-    command: ["ganache-cli", "-h", "ganache-cli", "-m", "smart contract composition", "--defaultBalanceEther", "100000000", "-l", "471238800", "-g", "1", "-v", "--keepAliveTimeout", "15000", "-b", "12"]
-    restart: always
-    container_name: ganache-cli
-    ports:
-      - "8545:8545"
-    networks:
+
+  ganache-with-truffle:
+    container_name: ganache-with-truffle
+    build:
+      context: ./ganache-cli
+      target: ganache
+    command: ["ganache-cli", "-m", "smart contract composition", "--defaultBalanceEther", "100000000", "-l", "471238800", "-g", "1", "-v", "--keepAliveTimeout", "15000", "-b", "12"]
+    networks: 
       case-study:
-        ipv4_address: 172.16.238.12
-        
+        ipv4_address: 172.16.238.12  
+
   orderer.example.com:
     container_name: orderer.example.com
     image: hyperledger/fabric-orderer:latest
