--- a/AutomateSetup/ganache-cli/Dockerfile
+++ b/AutomateSetup/ganache-cli/Dockerfile
@@ -3,3 +3,4 @@ RUN mkdir /truffle
 WORKDIR /truffle
 RUN npm install -g truffle@5.0.9
 COPY ./Digest /smart-contracts/Digest
+WORKDIR /smart-contracts/Digest
