Initialize Client Applicaiton

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,61 @@
+# See http://help.github.com/ignore-files/ for more about ignoring files.
+
+# maven
 target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
-release.properties
-dependency-reduced-pom.xml
-buildNumber.properties
-.mvn/timing.properties
+!.mvn/wrapper/maven-wrapper.jar
+
+# node.js / webpack
+/node_modules
+/src/**/*.js
+/src/**/*.js.map
+npm-debug.log
+/node
+
+# compiled output
+/dist
+/tmp
+/out-tsc
+
+# custom
+build/src/main/resources/static/**/*
+!build/src/main/resources/static/.gitkeep
+
+# IDEs and editors
+.idea
+*.iws
+BlockchainAccessLayer.iml
+*.ipr
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# misc
+/.sass-cache
+/connect.lock
+/coverage
+/libpeerconnection.log
+testem.log
+/typings
+
+# e2e
+/e2e/*.js
+/e2e/*.map
+
+# System Files
+.DS_Store
+Thumbs.db
+*.iml
+
 
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
 !/.mvn/wrapper/maven-wrapper.jar
