add frontend project

--- a/AutomateSetup/docker-compose.yml
+++ b/AutomateSetup/docker-compose.yml
@@ -34,6 +34,8 @@ services:
       context: ./ganache-cli
       target: ganache
     command: ["ganache-cli", "-m", "smart contract composition", "--defaultBalanceEther", "100000000", "-l", "471238800", "-g", "1", "-v", "--keepAliveTimeout", "15000", "-b", "12"]
+    ports:
+      - "8545:8545"
     networks: 
       case-study:
         ipv4_address: 172.16.238.12  
@@ -168,7 +170,7 @@ services:
         ipv4_address: 172.16.238.15  
 
 networks:
-  case-study:    
+  case-study:
     ipam:
       driver: default
       config:
